# event-management

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
event-management/: .gitignore  Makefile  README.md  app.py
event-management/.github/workflows/: ci.yml
event-management/static/: manifest.json
event-management/templates/: base.html  index.html
event-management/tests/: test_app.py
event_management/: __init__.py  config.py  constants.py  date_utils.py  db.py  legacy_migrations.py  migrations.py  notifications.py  parsers.py  routes.py  schema.py  security.py  security_auth.py  security_hooks.py  security_rate_limit.py  validators.py  webapp.py
event_management/blueprints/: __init__.py  api.py  auth.py  bookings.py  events.py
event_management/repositories/: bookings_repo.py  events_repo.py
event_management/services/: booking_service.py  event_service.py
migrations/versions/: 20260228_0001_initial_schema.sql
scripts/: backup_db.sh  restore_db.sh
static/: service-worker.js
static/css/: book.css  booking_audit.css  bookings.css  edit_event.css  index.css  login.css  main.css  my_bookings.css
static/js/: login.js  main.js
templates/: base.html  book.html  booking_audit.html  bookings.html  edit_event.html  index.html  login.html  my_bookings.html
tests/: test_app.py  test_booking_service.py  test_repositories.py  test_smoke.py
