[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-management"
version = "0.1.0"
description = "Simple Flask event management app"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0"
]

[project.scripts]
event-management = "app:main"
